# spacegate

./: Cargo.toml
kernel/: Cargo.toml
kernel/src/: functions.rs  instance.rs  lib.rs  service.rs
kernel/src/config/: config_by_k8s.rs  config_by_local.rs  config_by_redis.rs  gateway_dto.rs  http_route_dto.rs  plugin_filter_dto.rs
kernel/src/functions/: http_route.rs  server.rs  websocket.rs
kernel/src/plugins/: filters.rs
kernel/tests/: test_config_by_redis.rs  test_custom_plugin.rs  test_https.rs
kernel2/: Cargo.toml
kernel2/src/: body.rs  context.rs  helper_layers.rs  lib.rs  plugin_layers.rs  route_layers.rs  utils.rs
kernel2/src/body/: compress.rs  dump.rs
kernel2/src/clients/: http_client.rs
kernel2/src/helper_layers/: async_filter.rs  bidirection_filter.rs  bidirection_filter_layer.rs  filter.rs  imresp_layer.rs  response_error.rs
kernel2/src/helper_layers/filter/: response_anyway.rs
kernel2/src/plugin_layers/: comde.rs  header_modifier.rs  inject.rs  rate_limit.rs  redirect.rs  retry.rs
kernel2/src/plugin_layers/comde/: compress_type.rs  content_encoding.rs
kernel2/src/route_layers/: http_route.rs
kernel2/src/route_layers/http_route/: builder.rs  match_request.rs  picker.rs  predicate.rs
kernel2/src/service/: http_client_service.rs  http_route.rs
kernel2/src/service/http_route/: builder.rs  picker.rs
kernel2/src/utils/: cache.rs  never.rs
plugins/: Cargo.toml
plugins/src/: filters.rs  lib.rs
plugins/src/filters/: retry.rs  transparent.rs
spacegate-plugin/: Cargo.toml
spacegate-plugin/src/: lib.rs  model.rs  plugins.rs
spacegate-plugin/src/plugins/: compression.rs  decompression.rs  header_modifier.rs  inject.rs  limit.rs  maintenance.rs  redirect.rs  retry.rs  (+3 more)
spacegate-tower/: Cargo.toml
spacegate-tower/src/: body.rs  context.rs  extension.rs  header.rs  helper_layers.rs  layers.rs  lib.rs  listener.rs  plugin_layers.rs  service.rs  utils.rs
spacegate-tower/src/body/: compress.rs
spacegate-tower/src/extension/: matched.rs
spacegate-tower/src/helper_layers/: async_filter.rs  bidirection_filter.rs  filter.rs  reload.rs  route.rs  status.rs
spacegate-tower/src/helper_layers/async_filter/: dump.rs
spacegate-tower/src/layers/: gateway.rs  http_route.rs  route.rs
spacegate-tower/src/layers/gateway/: builder.rs
spacegate-tower/src/layers/http_route/: builder.rs  match_hostname.rs  match_request.rs
spacegate-tower/src/plugin_layers/: header_modifier.rs  rate_limit.rs  redirect.rs
spacegate-tower/src/route_layers/http_route/: match_request.rs  predicate.rs
spacegate-tower/src/service/: echo.rs  http_client_service.rs  ws_client_service.rs
spacegate-tower/src/utils/: fold_sg_layers.rs  modify_uri.rs  with_length_or_chunked.rs
(+3 files in other folders)
